# adapter-github

./: .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  ruff.yml
codegen/: __init__.py  __main__.py
codegen/templates/: __init__.py.jinja  _base.py.jinja  _types.py.jinja  event.py.jinja
nonebot/adapters/github/: __init__.py  adapter.py  bot.py  compat.py  config.py  event.py  exception.py  lazy_module.py  message.py  utils.py
nonebot/adapters/github/event/: __init__.py  _base.py  _types.py  branch_protection_configuration.py  branch_protection_configuration_disabled.py  branch_protection_configuration_enabled.py  branch_protection_rule.py  branch_protection_rule_created.py  branch_protection_rule_deleted.py  branch_protection_rule_edited.py  check_run.py  check_run_completed.py  check_run_created.py  check_run_requested_action.py  check_run_rerequested.py  check_suite.py  check_suite_completed.py  check_suite_requested.py  check_suite_rerequested.py  code_scanning_alert.py  code_scanning_alert_appeared_in_branch.py  code_scanning_alert_closed_by_user.py  code_scanning_alert_created.py  code_scanning_alert_fixed.py  code_scanning_alert_reopened.py  code_scanning_alert_reopened_by_user.py  commit_comment.py  create.py  custom_property.py  custom_property_created.py  custom_property_deleted.py  custom_property_promote_to_enterprise.py  custom_property_updated.py  custom_property_values.py  delete.py  dependabot_alert.py  dependabot_alert_auto_dismissed.py  dependabot_alert_auto_reopened.py  dependabot_alert_created.py  dependabot_alert_dismissed.py  (+272 more)
