[tool.poetry]
name = "nonebot-adapter-github"
version = "0.2.1"
description = "GitHub adapter for nonebot2"
authors = ["yanyongyu <yyy@nonebot.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nonebot/adapter-github"
repository = "https://github.com/nonebot/adapter-github"
documentation = "https://github.com/nonebot/adapter-github"
keywords = ["bot", "github", "webhook"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
packages = [
  { include = "nonebot" }
]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-beta.5"
githubkit = { version = ">=0.7.0,<1.0.0", extras = ["auth-app"] }

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.1.0"
Jinja2 = "^3.1.2"
nonemoji = "^0.1.2"
pre-commit = "^2.20.0"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
