[tool.poetry]
name = "nonebot-adapter-github"
version = "0.4.0"
description = "GitHub adapter for nonebot2"
authors = ["yanyongyu <yyy@nonebot.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nonebot/adapter-github"
repository = "https://github.com/nonebot/adapter-github"
documentation = "https://github.com/nonebot/adapter-github"
keywords = ["bot", "github", "webhook"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
packages = [{ include = "nonebot" }]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.2.0"
pydantic = ">=1.10.0,<3.0.0,!=2.5.0,!=2.5.1"
githubkit = { version = ">=0.11.0,<0.12.0", extras = ["auth-app"] }

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
isort = "^5.10.1"
black = "^24.0.0"
Jinja2 = "^3.1.2"
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"

[tool.black]
preview = true
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

[tool.ruff.lint.extend-per-file-ignores]
"nonebot/adapters/github/event/*" = ["E501"]

[tool.pyright]
pythonPlatform = "All"
executionEnvironments = [
  { root = "./codegen", pythonVersion = "3.10", extraPaths = [
    "./",
  ] },
  { root = "./", pythonVersion = "3.8" },
]
defineConstant = { PYDANTIC_V2 = true }

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
